Fixed: universal - there's a left / right shift that's happening

--- a/resources/assets/styles/_global.scss
+++ b/resources/assets/styles/_global.scss
@@ -161,3 +161,9 @@ body.home {
         bottom: 1px;
     }
 }
+
+@media(max-width:1000px){
+    body {
+        overflow-x: hidden;
+    }
+}
